Model mapper logic added